[package]
name = "kiwi_api"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
config = "0.9"
serde = { version = "1.0.115", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.4"
env_logger = "0.7.1"
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0"
actix_validated_forms = { git = "https://github.com/jacob-pro/actix-validated-forms" }
actix_validated_forms_derive = { git = "https://github.com/jacob-pro/actix-validated-forms" }
validator = "0.10.1"
validator_derive = "0.10.1"


#actix-web-httpauth = "0.3.1"    # Middleware for validating Basic Auth Header
#chrono = "0.4.6"    # Time library
#serde_urlencoded = "0.5.5" # Serde for URL encoded query
#bincode = "1.1.4"   # Implementation of Serde for Binary
#bcrypt = "0.4.0"    # Password hashing
#rand = "0.6.5"      # Random number generation
#base64 = "0.10.1"
