[package]
name = "kiwi_api"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
config = "0.9"
serde = { version = "1.0.115", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.4"
env_logger = "0.7.1"
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0"
actix_validated_forms = { git = "https://github.com/jacob-pro/actix-validated-forms" }
actix_validated_forms_derive = { git = "https://github.com/jacob-pro/actix-validated-forms" }
actix-ratelimit = "0.2.1"
validator = "0.10.1"
validator_derive = "0.10.1"
chrono = "0.4.15"
rand = "0.7.3"
base64 = "0.12.3"
actix-web-httpauth = "0.4.2"
bincode = "1.3.1"
futures = "0.3.1"
bcrypt = "0.8"
lettre = "0.9"
lettre_email = "0.9"
linkify = "0.4.0"
native-tls = "0.2"
image = "0.23.9"
url = { version = "2.1.1", features = ["serde"] }
rayon = "1.1"
