[package]
name = "kiwi_api"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.2"
actix-ratelimit = "0.2.1"
actix-rt = "1.0"
actix-web = "2.0"
actix-web-httpauth = "0.4.2"
actix_validated_forms = { git = "https://github.com/jacob-pro/actix-validated-forms", features = ["derive"] }
base64 = "0.12.3"
bcrypt = "0.8"
bigdecimal = "0.1.2"
bincode = "1.3.1"
chrono = "0.4.15"
clap = "2.33.3"
config = "0.9"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "bigdecimal", "numeric"] }
diesel_migrations = "1.4.0"
enum-iterator = "0.6.0"
env_logger = "0.7.1"
futures = "0.3.1"
image = "0.23.9"
itertools = "0.9.0"
kamadak-exif = "0.5.2"
lettre = "0.9"
lettre_email = "0.9"
linkify = "0.4.0"
log = "0.4.11"
native-tls = "0.2"
num =  { version = "0.2", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
r2d2 = "0.8.4"
rand = "0.7.3"
rayon = "1.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3.0"
url = { version = "2.1.1", features = ["serde"] }
validator = "0.10.1"
validator_derive = "0.10.1"
